build.log
    Checking interlink-core v0.3.0 (C:\Users\Ishaan\OneDrive\Desktop\Cobalt\interlink-core)
error[E0107]: enum takes 2 generic arguments but 1 generic argument was supplied
  --> interlink-core\src\relayer.rs:37:32
   |
37 |     pub async fn run(&self) -> Result<()> {
   |                                ^^^^^^ -- supplied 1 generic argument
   |                                |
   |                                expected 2 generic arguments
   |
help: add missing generic argument
   |
37 |     pub async fn run(&self) -> Result<(), E> {
   |                                         +++

error[E0107]: enum takes 2 generic arguments but 1 generic argument was supplied
   --> interlink-core\src\relayer.rs:119:74
    |
119 |     fn generate_proof_sync(nonce: u64, hash: [u8; 32], chain_id: u64) -> Result<Vec<u8>> {
    |                                                                          ^^^^^^ ------- supplied 1 generic argument
    |                                                                          |
    |                                                                          expected 2 generic arguments
    |
help: add missing generic argument
    |
119 |     fn generate_proof_sync(nonce: u64, hash: [u8; 32], chain_id: u64) -> Result<Vec<u8>, E> {
    |                                                                                        +++

error[E0277]: `InterlinkError` doesn't implement `std::fmt::Display`
  --> interlink-core\src\relayer.rs:68:79
   |
68 |                         eprintln!("[ERROR] Solana Hub Submission Failed: {}", e);
   |                                                                          --   ^ `InterlinkError` cannot be formatted with the default formatter
   |                                                                          |
   |                                                                          required by this formatting parameter
   |
help: the trait `std::fmt::Display` is not implemented for `InterlinkError`
  --> interlink-core\src\lib.rs:7:1
   |
 7 | pub enum InterlinkError {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error[E0599]: no method named `next` found for struct `EventStream<'a, T, R, E>` in the current scope
   --> interlink-core\src\relayer.rs:106:44
    |
106 |         while let Some(log) = block_stream.next().await {
    |                                            ^^^^
    |
   ::: C:\Users\Ishaan\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\futures-util-0.3.32\src\stream\stream\mod.rs:273:8
    |
273 |     fn next(&mut self) -> Next<'_, Self>
    |        ---- the method is available for `EventStream<'_, SubscriptionStream<'_, Ws, ethers_core::types::Log>, MessagePublishedFilter, ethers_contract::ContractError<Provider<Ws>>>` here
    |
    = help: items from traits can only be used if the trait is in scope
    = note: the full name for the type has been written to 'C:\Users\Ishaan\OneDrive\Desktop\Cobalt\target\debug\deps\interlink_core-f8c8b656f85b0c12.long-type-6865076354399648600.txt'
    = note: consider using `--verbose` to print the full type name to the console
help: trait `StreamExt` which provides `next` is implemented but not in scope; perhaps you want to import it
    |
  1 + use ethers_providers::StreamExt;
    |
help: there is a method `try_next` with a similar name
    |
106 |         while let Some(log) = block_stream.try_next().await {
    |                                            ++++

warning: unused import: `Middleware`
 --> interlink-core\src\relayer.rs:2:38
  |
2 | use ethers_providers::{Provider, Ws, Middleware};
  |                                      ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0107, E0277, E0599.
For more information about an error, try `rustc --explain E0107`.
warning: `interlink-core` (lib) generated 1 warning
error: could not compile `interlink-core` (lib) due to 4 previous errors; 1 warning emitted
